Added Youtube Channels to config file. Added Logic to Fetch Video Resource info and save it in the cache.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -115,4 +115,13 @@ body {
             height: 100%;
         }
     }
+    
+    .image-container {
+        text-align: center;
+        margin: 3px;
+        
+        img {
+            width: 100%;
+        }
+    }
 }
